fix underline on projects list that disappears on smaller screens

--- a/src/styles/components/ProjectList.module.css
+++ b/src/styles/components/ProjectList.module.css
@@ -1,11 +1,3 @@
-.projectsList {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around; */
-    /* border: 1px solid red; */
-}
-
 .projectLink {
     width: fit-content;
 }
